# bankingSystem

./: .gitignore  Bank.cpp  Bank.h  BankSystem.h  CMakeLists.txt  Client.cpp  Client.h  Legal.cpp  Legal.h  Physical.cpp  Physical.h  README.md  main.cpp  task.txt
GUI/: Console.cpp  Console.h
bank/: Bank.cpp  Bank.h  BankSystem.cpp  BankSystem.h
client/: Client.cpp  Client.h  Legal.cpp  Legal.h
